# safe-zone

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  go.mod  go.sum  init.sql  main.go  pyproject.toml
.github/workflows/: ci-test.yml  release.yml
ci/: release_thyris-sz.sh  release_tsz-cli.sh  release_tszclient-go.sh  release_tszclient-py.sh
docs/: API_REFERENCE.md  ARCHITECTURE_SECURITY.md  PRODUCT_OVERVIEW.md  PROVIDERS.md  QUICK_START.md  README.md  RELEASE-POLICY.md  TSZ_Postman_Collection.json
docs/concepts/: STREAMING.md
examples/go-bedrock-gateway/: README.md  main.go
examples/go-data-exfiltration-redteam/: README.md  main.go
examples/go-llm-gateway/: main.go
examples/go-llm-redteam-playground/:     README.md  main.go
examples/go-llm-safe-pipeline/: README.md  main.go
examples/go-prompt-injection/: README.md  main.go
examples/go-sdk-demo/: README.md  go.mod  main.go
examples/langchain-tsz/: README.md  main.py
examples/llm-data-exfiltration-redteam-python/: .env.example  README.md  attacks.py  main.py  requirements.txt  utils.py
examples/llm-redteam-playground-python/: README.md  attacks.py  main.py  runner.py  utils.py
examples/ollama-local-firewall/: README.md  main.py
examples/otel-exporter-python/: README.md  main.py
examples/python-audit-logging/: README.md  audit_log.json  main.py
examples/python-llm-safe-pipeline/: README.md  main.py
examples/python-sdk-demo/: llm_safe_prompt.py  main.py
test-scripts/: main.go
tests/: README.md
(+54 files in other folders)
